# Attendance-System

./: app.py  pyproject.toml  requirements.txt  run.py
backend/: __init__.py  choices.py  models.py  schemas.py  views.py
nfcSystem/: .gitignore  App.js  app.json  babel.config.js  package-lock.json  package.json
nfcSystem/android/: settings.gradle
nfcSystem/android/app/: build.gradle
nfcSystem/android/app/src/main/: AndroidManifest.xml
nfcSystem/src/features/home/components/: search_component.js  user.detail.card.js  (+1 more)
nfcSystem/src/infrastructure/navigation/: app.navigator.js
nfcSystem/src/services/users/: user.context.js
nfc_system/: pubspec.yaml
nfc_system/android/app/: build.gradle
nfc_system/ios/Runner/: Info.plist
nfc_system/ios/Runner.xcodeproj/: project.pbxproj
nfc_system/lib/: main.dart
nfc_system/lib/components/: attendance_modal.dart  bottom_navigation_bar.dart  circular_button.dart  search_bar.dart  user_card.dart  user_modal.dart  user_model.dart
nfc_system/lib/models/: AttendanceModel.dart  MeetingModel.dart  NFCUserModel.dart  UserModel.dart
nfc_system/lib/providers/: AttendanceProvider.dart  AuthProvider.dart  MeetingProvider.dart  NFCUserProvider.dart
nfc_system/lib/screens/: LoginScreen.dart  MainScreen.dart  ScanScreen.dart  SearchUserScreen.dart
nfc_system/linux/: CMakeLists.txt  my_application.cc
nfc_system/macos/Runner.xcodeproj/: project.pbxproj
nfc_system/macos/Runner/Configs/: AppInfo.xcconfig
nfc_system/web/: index.html
nfc_system/windows/: CMakeLists.txt
nfc_system/windows/runner/: Runner.rc
(+10 files in other folders)
