[tool.poetry]
name = "attendancesystem"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.5"
flask-migrate = "^4.0.4"
sqlalchemy-utils = "^0.41.1"
flask-admin = "^1.6.1"
flask-login = "^0.6.2"
flask-marshmallow = "^0.15.0"
marshmallow-sqlalchemy = "^0.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
